Add Pokémon Violet to title of journal

--- a/pokemonViolet.html
+++ b/pokemonViolet.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Starlii's Game Journals</title>
+        <title>Pokémon Violet - Starlii's Game Journals</title>
     </head>
     <body>
         <header>
