--- a/pokemonViolet.html
+++ b/pokemonViolet.html
@@ -27,21 +27,22 @@
                 </ul>
             </aside>
             <h3>Introduction</h3>
-                <p>Pokémon Scarlet and Violet, known collectively as Pokémon Gen 9, are role-playing games developed by Game Freak and published by Nintendo for the Nintendo Switch. The games released in 2022, with an additional DLC named "The Hidden Treasure of Area Zero" releasing as two parts in late 2023.</p>
-                <p>The game takes place in the region of Paldea, where the player attends either Naranja Academy (Scarlet) or Uva Academy (Violet). These schools hold an annual "Treasure Hunt" event, in which the player is tasked with three missions:</p>
+                <p>Pokémon Scarlet and Violet, known collectively as Pokémon Generation 9 (or just Gen 9), are role-playing games developed by Game Freak and published by Nintendo for the Nintendo Switch. The games released in 2022, with an additional DLC named "The Hidden Treasure of Area Zero" releasing as two parts in late 2023.</p>
+                <p>The game takes place in the region of Paldea, where the player attends either Naranja Academy (Scarlet) or Uva Academy (Violet). These schools hold an annual "Treasure Hunt" event, during which the player is tasked with three missions:</p>
                 <ul>
                     <li>Victory Road, where the player must become a Pokémon Champion</li>
                     <li>Path of Legends, where the player must locate five Herba Mystica to restore their legendary Pokémon's powers</li>
                     <li>Starfall Street, where the player must defeat Team Star, a school group responsible for bullying</li>
                 </ul>
-                <p>I have not completed this game, so I don't really know what happens after that. Until then...</p>
+                <p>After completing the three main campaigns, the final mission is to adventure into Area Zero, the crater in the middle of Paldea. There, the player finds the truth about the legendary Pokémon Koraidon and Miraidon. No spoilers, though!</p>
             <h3>Shenanigans</h3>
                 <p>Where do I even begin with this section? I guess I should comment on the performance. Yeah, Game Freak pulled an ARK: Survival Evolved with this game. I'm guessing a lot of it was also just because the Switch is underpowered, but something tells me Game Freak has a role in this.</p>
                 <p>Also, did I mention Pokémon Home exists? So if you played Gen 8, then you can just take your overpowered Pokémon to Gen 9. Now, you can only transfer Pokémon of certain level until you have every Gym Badge or they won't listen to you, but once you do, it's basically easy mode. ESPECIALLY with Zacian (why is that mon so freaking OP I love it).</p>
                 <p>I also played through the DLC and uh... there's a lot of things up with it. For starters, I enjoyed the plot of the DLC. But also, Oni Mountain lags HARD in some areas. Once again, Game Freak pulling an ARK.</p>
-                <p>The DLC and base game difficulty balance is pretty good. I think. I kinda beelined straight for the DLC instead of playing through the base game. Then when I got stuck, I just got Gym Badges for Pokémon Home and transferred a bunch of OP Pokémon to deal with it.</p>
+                <p>The DLC and base game difficulty balance is pretty good. I think. I kinda beelined straight for the DLC instead of playing through the base game. Then when I got stuck, I just got Gym Badges to fully unlock Pokémon Home transfers and brought over a bunch of OP Pokémon to deal with it.</p>
                 <p>Also, uh, did I mention there's a secret way to get a certain mythical Pokémon in the DLC? Did I also mention it's my favorite mythical ever? In Part 2 of the DLC, immediately after the first battle, you can go to a certain spot and mess with the camera. Then after you turn around, you get jumpscared with Meloetta. Because of course you do.</p>
                 <p>I still have no idea what I'm doing. I mostly look up Serebii and Bulbapedia so I can get an idea on what I need to do next. Despite playing TWO Pokémon games (4 if you count Yellow and emulated Black/White), I still can't figure out type weaknesses and I usually just farm dens for a while.</p>
+                <p>I ended up beating the base game with a total time of about 20 hours. Including Pokémon Sword and potentially Yellow, I have played about 60+ hours of Pokémon games. Not too bad, but it could always be way higher especially if I didn't use Pokémon Home.</p>
             <h3>Rating</h3>
                 <p>Okay, now it's time for the final judgement! We'll be rating the game based on my personal experience with it.</p>
                 <p>The plot gets an 8/10 from me. I enjoyed it. There's definitely a lot of weird things, but I actually enjoyed the story. Although, there was a lot of A-mashing to get through the dialogue.</p>
