--- a/pokemonViolet.html
+++ b/pokemonViolet.html
@@ -57,7 +57,7 @@
                 </nav>
         </div>
         <footer>
-            <a href="https://github.com/starlii10">GitHub</a>
+            <p>Check me out on: <a href="https://github.com/starlii10">GitHub</a> | <a href="https://discord.gg/placeholder">Discord (placeholder)</a></p>
         </footer>
     </body>
 </html>
