Add new pages section to home page

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
                 <a href="overwatch.html">Overwatch 2</a>
             </nav>
         </div>
+        <div id="newPages">
+            <h2>Recently added</h2>
+            <nav>
+                <a href="pokemonSword.html">Pokémon Sword</a>
+            </nav>
+        </div>
         <footer>
             <p>Check me out on: <a href="https://github.com/starlii10">GitHub</a> | <a href="https://discord.gg/placeholder">Discord (placeholder)</a></p>
         </footer>
