Add Splatoon 3 article

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <h2>Recently added</h2>
             <nav>
                 <a href="pokemonSword.html">Pokémon Sword</a>
+                <a href="splatoon3.html">Splatoon 3</a>
             </nav>
         </div>
         <footer>
