Jeloetta -> link to twitch

--- a/splatoon3.html
+++ b/splatoon3.html
@@ -39,7 +39,7 @@
                 <p>First off, it's an online multiplayer game. Emphasis on "online multiplayer" here. That means you need to pay Nintendo $20 a year to play a $60 game on a $300 console. And the online servers are... subpar, to say the least.</p>
                 <p>Unlike any other shooter, the Splatoon series primarily uses motion controls for aiming. Yes, you have to physically MOVE YOUR CONTROLLER to aim. You can use joysticks, but you'll be at a disadvantage to everyone else. If you don't play high-level ranked, though, you'll be fine.</p>
                 <p>If you had Splatoon 2 save data, yes, you can import it. You get to start out with 3 free guns, immediate ranked access, and skill-based matchmaking that reflects your Splatoon 2 skill level.</p>
-                <p>This game also lets you invite friends to play with you, so of course I invited Jeloetta and co. Let's just say skill-based matchmaking breaks hilariously when your friends are better/worse than you. It made for good content, though.</p>
+                <p>This game also lets you invite friends to play with you, so of course I invited <a href="https://twitch.tv/jeloetta">Jeloetta</a> and co. Let's just say skill-based matchmaking breaks hilariously when your friends are better/worse than you. It made for good content, though.</p>
             <h3>Rating</h3>
                 <p>RATING TIME! The time where I judge the game based on my experience with it.</p>
                 <p>The plot wasn't that great, but that's mainly because they really focused on the multiplayer. I have no complaints here. The ending goes hard, though. 7/10.</p>
