--- a/splatoon3.html
+++ b/splatoon3.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Pokémon Sword - Starlii's Game Journals</title>
+        <title>Splatoon 3 - Starlii's Game Journals</title>
         <link rel="stylesheet" href="global.css">
     </head>
     <body>
