General updates to Splat3 article

--- a/splatoon3.html
+++ b/splatoon3.html
@@ -28,9 +28,9 @@
             </aside>
             <h3>Introduction</h3>
                 <p>Splatoon 3 is a 3D shooter game developed and published by Nintendo. It is the third game in the Splatoon series, and the second Splatoon game on the Nintendo Switch.</p>
-                <p>The game released in 2022, with an early access "Splatfest World Premiere" two weeks before the game's release. An additional Expansion Pass DLC was released in two parts: the first part, Inkopolis, released in 2023, and the second part, Side Order, released in 2024.</p>
+                <p>The game released in 2022, with an early access "Splatfest World Premiere" taking place on August 27, 2022, two weeks before the game's release on September 9, 2022. An additional Expansion Pass DLC was released in two parts: the first part, Inkopolis, released in 2023, and the second part, Side Order, released in 2024.</p>
                 <p>Splatoon is an online 4v4 shooter where the characters shoot ink from their guns. In the game's main mode, Turf War, players must cover more of a map with their own colored ink than the other team within 3 minutes.</p>
-                <p>The game also has an offline campaign, where the player is challenged with different puzzles and fights. I won't go into detail on that, though.</p>
+                <p>The game also has an offline campaign, where the player goes through different levels ranging from platforming challenges to all-out combat sections. I won't go into detail on that, though.</p>
                 <p>Additionally, there are multiple other multiplayer modes, such as Splat Zones, Rainmaker, and Clam Blitz. These are in the game's ranked mode, Anarchy Battles.</p>
                 <p>A PvE mode also exists, called Salmon Run, where the players must survive against "Salmonids" and collect Golden Eggs to win.</p>
                 <p>I'll add more info here. If I don't do so within a week, tell me on GitHub, please.</p>
@@ -38,16 +38,16 @@
                 <p>This is predominantly an online multiplayer game, but it still has its fair share of shenanigans. What game doesn't?</p>
                 <p>First off, it's an online multiplayer game. Emphasis on "online multiplayer" here. That means you need to pay Nintendo $20 a year to play a $60 game on a $300 console. And the online servers are... subpar, to say the least.</p>
                 <p>Unlike any other shooter, the Splatoon series primarily uses motion controls for aiming. Yes, you have to physically MOVE YOUR CONTROLLER to aim. You can use joysticks, but you'll be at a disadvantage to everyone else. If you don't play high-level ranked, though, you'll be fine.</p>
-                <p>If you had Splatoon 2 save data, yes, you can import it. You get to start out with 3 free guns, immediate ranked access, and skill-based matchmaking that reflects your Splatoon 2 skill level.</p>
+                <p>If you had Splatoon 2 save data, you can import it for some bonuses. You get to start out with 3 free guns, immediate ranked access, and skill-based matchmaking that reflects your Splatoon 2 skill level. Although, in my experience, that pop-up only appears if you have NSO, which I didn't have when I first got the game.</p>
                 <p>This game also lets you invite friends to play with you, so of course I invited <a href="https://twitch.tv/jeloetta">Jeloetta</a> and co. Let's just say skill-based matchmaking breaks hilariously when your friends are better/worse than you. It made for good content, though.</p>
             <h3>Rating</h3>
-                <p>RATING TIME! The time where I judge the game based on my experience with it.</p>
-                <p>The plot wasn't that great, but that's mainly because they really focused on the multiplayer. I have no complaints here. The ending goes hard, though. 7/10.</p>
+                <p>Alright, I'm done pretending this is a meh-tier game. RATING TIME.</p>
+                <p>The plot wasn't that great, but that's mainly because they really focused on the multiplayer. The ending goes hard, though, and THE FREAKING MUSIC. 7/10.</p>
                 <p>Oh my Arceus, the GAMEPLAY. I don't think anything could top it. There's so many modes and you literally won't get bored unless you really don't like ranked play. This is the first 10/10 I've ever given gameplay.</p>
                 <p>I guess I can count laggy online servers as bugginess? The game itself isn't that buggy, but online likes to disconnect like every other Nintendo Switch game. 8/10.</p>
                 <p>Drumroll for the rating...</p>
             <h2>8/10 - Would highly recommend</h2>
-                <p>If you like third-person shooters, colorful chaos, and multiplayer madness, then Splatoon 3 is for you.</p>
+                <p>If you like third-person shooters, colorful chaos, and multiplayer madness, then Splatoon 3 is for you. Just be aware of the NSO requirement.</p>
             <h2>More like this</h2>
                 <nav>
                     <a href="placeholder.html">Placeholder</a>
