I bought the splat dlc + prepare for logo introduction

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     </head>
     <body>
         <header>
+            <!--- <img src="resources/images/journals-logo.png" alt="Starlii's Game Journals logo" id="logo"> --> <!--- todo: add logo to files -->
             <h1>Starlii's Game Journals</h1>
             <p>Video games, but with HUMOR</p>
         </header>
