--- a/splatoon3.html
+++ b/splatoon3.html
@@ -23,7 +23,7 @@
                 </ul>
                 <ul>
                     <li>Bought by: Gifted (Christmas)</li>
-                    <li>DLC Bought by: Did not buy DLC</li>
+                    <li>DLC Bought by: Walmart</li>
                 </ul>
             </aside>
             <h3>Introduction</h3>
