--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <nav>
                 <a href="pokemonViolet.html">Pokémon Violet</a>
                 <a href="splatoon3.html">Splatoon 3</a>
-                <a href="overwatch.html">Overwatch 2</a>
+                <a href="overwatch.html">Overwatch 2 (doesn't work right now)</a>
             </nav>
         </div>
         <div id="newPages">
