mokepon violence + splat change

--- a/pokemonViolet.html
+++ b/pokemonViolet.html
@@ -43,11 +43,12 @@
                 <p>Also, uh, did I mention there's a secret way to get a certain mythical Pokémon in the DLC? Did I also mention it's my favorite mythical ever? In Part 2 of the DLC, immediately after the first battle, you can go to a certain spot and mess with the camera while spinning in place. Then after you turn around, you get jumpscared with Meloetta. Because of course you do.</p>
                 <p>I still have no idea what I'm doing. I mostly look up Serebii and Bulbapedia so I can get an idea on what I need to do next. Despite playing TWO Pokémon games (4 if you count Yellow and emulated Black/White), I still can't figure out type weaknesses and I usually just farm dens for a while.</p>
                 <p>I ended up beating the base game with a total time of about 20 hours. Including Pokémon Sword and potentially Yellow, I have played about 60+ hours of Pokémon games. Not too bad, but it could always be way higher especially if I didn't use Pokémon Home.</p>
+                <p><em>Side note: this game has become an inside joke, where me and the <a href="https://twitch.tv/jeloetta">Jeloetta</a> community call it "Pokémon Scarred" and "Pokémon Violence" respectively.</em></p>
             <h3>Rating</h3>
                 <p>Okay, now it's time for the final judgement! We'll be rating the game based on my personal experience with it.</p>
-                <p>The plot gets an 8/10 from me. I enjoyed it. There's definitely a lot of weird things, but I actually enjoyed the story. Although, there was a lot of A-mashing to get through the dialogue.</p>
+                <p>The plot gets an 8/10 from me. I enjoyed it, especially the DLC. Although, there was a lot of A-mashing to get through the dialogue. But that's RPGs for ya.</p>
                 <p>The gameplay is Pokémon, so it's 9/10. I mean, if it's not at least 8, Game Freak screwed up hard. I liked how they took the open-world idea from the Wild Zone in Gen 8 and expanded it to the entire game, including the towns. The dens also got a bunch of QoL improvements, such as not taking 5 years to get through 1 turn.</p>
-                <p>As for the bugginess, it's Nintendo, so there's not a bunch of weird things I've found in the game that I can't explain. Sadly, due to the performance, it only gets a 7/10. But compared to other games, it's actually really good.</p>
+                <p>As for the bugginess, it's Nintendo, so there's not a bunch of weird things I've found in the game that I can't explain. Sadly, due to the performance, it only gets a 7/10. Game Freak please fix your game's performance.</p>
                 <p>Overall, my final rating is...</p>
             <h2>8/10 - Would recommend</h2>
                 <p>I'd suggest this game to anyone who's interested in RPGs, and definitely for first-time Pokémon players. Although, younger players may have a hard time comprehending a bunch of things, so I'd pass on suggesting this game to them.</p>
