--- a/splatoon3.html
+++ b/splatoon3.html
@@ -45,7 +45,7 @@
                 <p>The plot wasn't that great, but that's mainly because they really focused on the multiplayer. The ending goes hard, though, and THE FREAKING MUSIC. 7/10.</p>
                 <p>Oh my Arceus, the GAMEPLAY. I don't think anything could top it. There's so many modes and you literally won't get bored unless you really don't like ranked play. This is the first 10/10 I've ever given gameplay.</p>
                 <p>I guess I can count laggy online servers as bugginess? The game itself isn't that buggy, but online likes to disconnect like every other Nintendo Switch game. 8/10.</p>
-                <p>Drumroll for the rating...</p>
+                <p>I can't hide it anymore. Splat3 gets...</p>
             <h2>8/10 - Would highly recommend</h2>
                 <p>If you like third-person shooters, colorful chaos, and multiplayer madness, then Splatoon 3 is for you. Just be aware of the NSO requirement.</p>
             <h2>More like this</h2>
