i forgot to commit everything I did so here's this

--- a/pokemonViolet.html
+++ b/pokemonViolet.html
@@ -11,6 +11,7 @@
             <p>Video games, but with HUMOR</p>
         </header>
         <div id="content">
+            <a id="top"></a>
             <h2>Pokémon Violet</h2>
             <aside>
                 <ul>
@@ -24,6 +25,10 @@
                 <ul>
                     <li>Bought by: Gifted (Christmas)</li>
                     <li>DLC Bought by: Gifted money (Christmas) and bought on Nintendo eShop</li>
+                </ul>
+                <ul>
+                    <li><a href="https://scarletviolet.pokemon.com/us/">Website</a></li>
+                    <li><a href="https://www.nintendo.com/us/pokemon-scarlet-violet/">Buy on eShop</a></li>
                 </ul>
             </aside>
             <h3>Introduction</h3>
@@ -52,6 +57,7 @@
                 <p>Overall, my final rating is...</p>
             <h2>8/10 - Would recommend</h2>
                 <p>I'd suggest this game to anyone who's interested in RPGs, and definitely for first-time Pokémon players. Although, younger players may have a hard time comprehending a bunch of things, so I'd pass on suggesting this game to them.</p>
+            <h3><a href="violetMedia.html">Media</a></h2>
             <h2>More like this</h2>
                 <nav>
                     <a href="pokemonSword.html">Pokémon Sword</a> (same franchise)
@@ -59,6 +65,7 @@
         </div>
         <footer>
             <p>Check me out on: <a href="https://github.com/starlii10">GitHub</a> | <a href="https://discord.gg/placeholder">Discord (placeholder)</a></p>
+            <p><a href="pokemonViolet.html#top">Return to top</a></p>
         </footer>
     </body>
 </html>
