--- a/index.html
+++ b/index.html
@@ -1,36 +1,46 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Starlii's Game Journals</title>
-        <link rel="stylesheet" href="global.css">
-    </head>
-    <body>
-        <header>
-            <!--- <img src="resources/images/journals-logo.png" alt="Starlii's Game Journals logo" id="logo"> --> <!--- todo: add logo to files -->
-            <h1>Starlii's Game Journals</h1>
-            <p>Video games, but with HUMOR</p>
-        </header>
-        <div id="introduction">
-            <p>Welcome to Starlii's Game Journals. Here I can document what shenanigans are possible in video games, mess around with them, and review how good I think their gameplay is.</p>
-        </div>
-        <div id="starterPages">
-            <h2>New here? Read these!</h2>
-            <nav>
-                <a href="pokemonViolet.html">Pokémon Violet</a>
-                <a href="splatoon3.html">Splatoon 3</a>
-                <a href="overwatch.html">Overwatch 2 (doesn't work right now)</a>
-            </nav>
-        </div>
-        <div id="newPages">
-            <h2>Recently added</h2>
-            <nav>
-                <a href="pokemonSword.html">Pokémon Sword</a>
-                <a href="splatoon3.html">Splatoon 3</a>
-            </nav>
-        </div>
-        <footer>
-            <p>Check me out on: <a href="https://github.com/starlii10">GitHub</a> | <a href="https://discord.gg/placeholder">Discord (placeholder)</a></p>
-        </footer>
-    </body>
+	<head>
+		<meta charset="utf-8" />
+		<title>Starlii's Game Journals</title>
+		<link rel="stylesheet" href="global.css" />
+	</head>
+	<body>
+		<header>
+			<!--- <img src="resources/images/journals-logo.png" alt="Starlii's Game Journals logo" id="logo"> -->
+			<!--- todo: add logo to files -->
+			<h1>Starlii's Game Journals</h1>
+			<p>Video games, but with HUMOR</p>
+		</header>
+		<div id="mainContent">
+			<div id="introduction">
+				<p>
+					Welcome to Starlii's Game Journals. Here I can document what
+					shenanigans are possible in video games, mess around with them, and
+					review how good I think their gameplay is.
+				</p>
+			</div>
+			<div id="starterPages">
+				<h2>New here? Read these!</h2>
+				<nav>
+					<a href="pokemonViolet.html">Pokémon Violet</a>
+					<a href="splatoon3.html">Splatoon 3</a>
+					<a href="overwatch.html">Overwatch 2 (doesn't work right now)</a>
+				</nav>
+			</div>
+			<div id="newPages">
+				<h2>Recently added</h2>
+				<nav>
+					<a href="pokemonSword.html">Pokémon Sword</a>
+					<a href="splatoon3.html">Splatoon 3</a>
+				</nav>
+			</div>
+		</div>
+		<footer>
+			<p>
+				Check me out on: <a href="https://github.com/starlii10">GitHub</a> |
+				<a href="https://discord.gg/placeholder">Discord (placeholder)</a>
+			</p>
+		</footer>
+	</body>
 </html>
