Hello media page (which doesn't work because I need the files from my switch)

--- a/pokemonViolet.html
+++ b/pokemonViolet.html
@@ -65,7 +65,7 @@
         </div>
         <footer>
             <p>Check me out on: <a href="https://github.com/starlii10">GitHub</a> | <a href="https://discord.gg/placeholder">Discord (placeholder)</a></p>
-            <p><a href="pokemonViolet.html#top">Return to top</a></p>
+            <p><a href="#top">Return to top</a></p>
         </footer>
     </body>
 </html>
