--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
 			<div id="starterPages">
 				<h2>New here? Read these!</h2>
 				<nav>
-					<a href="pokemonViolet.html">Pokémon Violet</a>
-					<a href="splatoon3.html">Splatoon 3</a>
-					<a href="overwatch.html">Overwatch 2 (doesn't work right now)</a>
+					<a href="Nintendo Switch/RPG/pokemonViolet.html">Pokémon Violet</a>
+					<a href="Nintendo Switch/Shooter/splatoon3.html">Splatoon 3</a>
+					<a href="PC/Shooter/overwatch.html">Overwatch 2 (doesn't work right now)</a>
 				</nav>
 			</div>
 			<div id="newPages">
 				<h2>Recently added</h2>
 				<nav>
-					<a href="pokemonSword.html">Pokémon Sword</a>
-					<a href="splatoon3.html">Splatoon 3</a>
+					<a href="Nintendo Switch/RPG/pokemonSword.html">Pokémon Sword</a>
+					<a href="Nintendo Switch/Shooter/splatoon3.html">Splatoon 3</a>
 				</nav>
 			</div>
 		</div>
