/file.txt = starlii10.github.io/file.txt, why github

--- a/Nintendo Switch/Shooter/splatoon3.html
+++ b/Nintendo Switch/Shooter/splatoon3.html
@@ -50,7 +50,7 @@
                 <p>If you like third-person shooters, colorful chaos, and multiplayer madness, then Splatoon 3 is for you. Just be aware of the NSO requirement.</p>
             <h2>More like this</h2>
                 <nav>
-                    <a href="/placeholder.html">Placeholder</a>
+                    <a href="/game-journals/placeholder.html">Placeholder</a>
                 </nav>
         </div>
         <footer>
