--- a/Nintendo Switch/RPG/pokemonSword.html
+++ b/Nintendo Switch/RPG/pokemonSword.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Pokémon Sword - Starlii's Game Journals</title>
-        <link rel="stylesheet" href="global.css">
+        <link rel="stylesheet" href="/game-journals/global.css">
     </head>
     <body>
         <header>
