--- a/placeholder.html
+++ b/placeholder.html
@@ -13,6 +13,6 @@
     ">
         <h1>Placeholder</h1>
         <p>If you're here, it's most likely because you tried to access a placeholder page.</p>
-        <p>Try going back to the <a href="index.html">home page</a>.</p>
+        <p>Try going back to the <a href="/game-journals/index.html">home page</a>.</p>
     </body>
 </html>
