Who said it was "en-us" and not "us"

--- a/Nintendo Switch/RPG/pokemonViolet.html
+++ b/Nintendo Switch/RPG/pokemonViolet.html
@@ -27,7 +27,7 @@
                     <li>DLC Bought by: Gifted money (Christmas) and bought on Nintendo eShop</li>
                 </ul>
                 <ul>
-                    <li><a href="https://scarletviolet.pokemon.com/us/">Website</a></li>
+                    <li><a href="https://scarletviolet.pokemon.com/en-us/">Website</a></li>
                     <li><a href="https://www.nintendo.com/us/pokemon-scarlet-violet/">Buy on eShop</a></li>
                 </ul>
             </aside>
