Fix pattern and css overall

--- a/Nintendo Switch/RPG/pokemonSword.html
+++ b/Nintendo Switch/RPG/pokemonSword.html
@@ -10,7 +10,7 @@
             <h1>Starlii's Game Journals</h1>
             <p>Video games, but with HUMOR</p>
         </header>
-        <div id="content">
+        <div id="mainContent">
             <h2>Pokémon Sword</h2>
             <aside>
                 <ul>
