--- a/Nintendo Switch/RPG/pokemonViolet.html
+++ b/Nintendo Switch/RPG/pokemonViolet.html
@@ -10,7 +10,7 @@
             <h1>Starlii's Game Journals</h1>
             <p>Video games, but with HUMOR</p>
         </header>
-        <div id="content">
+        <div id="mainContent">
             <a id="top"></a>
             <h2>Pokémon Violet</h2>
             <aside>
