might as well commit all of these

--- a/Nintendo/Switch/RPG/pokemonSword.html
+++ b/Nintendo/Switch/RPG/pokemonSword.html
@@ -22,8 +22,8 @@
                     <li>Has DLC: Yes</li>
                 </ul>
                 <ul>
-                    <li>Bought by: Gifted (Christmas)</li>
-                    <li>DLC Bought by: Did not buy DLC</li>
+                    <li>Bought: Gifted (Christmas)</li>
+                    <li>DLC Bought: Nope</li>
                 </ul>
             </aside>
             <h3>Introduction</h3>
@@ -39,7 +39,7 @@
                 <p>You know what time it is! It's RATING TIME! The time where I judge the game based on my experience with it.</p>
                 <p>The plot was great. Mostly about finding out what happened with Zacian/Zamazenta. Darkest Day this, Ancient Sword that. Slowly putting the pieces together until the end. 8/10!</p>
                 <p>The gameplay? I personally love the Wild Area and its focus on an open-world experience. The Dynamax feature added a lot more strategy to battles. And of course, Raid Battles are great besides taking forever to do. 9/10.</p>
-                <p>Bugginess? Never heard of it. I haven't encountered any serious glitches and the game runs fine unlike the next game in the series. I'm giving this one a 9/10.</p>
+                <p>Bugginess? Never heard of it. I haven't encountered any serious glitches and the game runs fine unlike the next game(s) in the series. I'm giving this one a 9/10.</p>
                 <p>And the final rating comes out to...</p>
             <h2>8.5/10 - Would recommend</h2>
                 <p>I'd suggest this game to Pokémon enthusiasts who want to play more Pokémon games on the Switch, or to those who need a home for their Pokémon they got through Pokémon Home.</p>
