--- a/Nintendo/Switch/RPG/violetMedia.html
+++ b/Nintendo/Switch/RPG/violetMedia.html
@@ -13,7 +13,7 @@
         <div id="content">
             <a id="top"></a>
             <h2>Pokémon Violet Media</h2>
-            <p>Here's some screenshots and videos from <a href="pokemonViolet.html">Pokémon Violet</a> to satisfy your curiosity.</p>
+            <p>Here's some screenshots and videos from <a href="pokemonViolet.html">Pokémon Violet</a> to satisfy your curiosity. Or just to show you how bad I am at video games.</p>
             <div id="media">
                 <h3>Screenshots</h3>
                 <figure>
