--- a/Nintendo/Switch/Shooter/splatoon3.html
+++ b/Nintendo/Switch/Shooter/splatoon3.html
@@ -22,8 +22,8 @@
                     <li>Has DLC: Yes</li>
                 </ul>
                 <ul>
-                    <li>Bought by: Gifted (Christmas)</li>
-                    <li>DLC Bought by: Walmart</li>
+                    <li>Bought: Gifted (Christmas)</li>
+                    <li>DLC Bought: Walmart'd</li>
                 </ul>
             </aside>
             <h3>Introduction</h3>
@@ -32,8 +32,7 @@
                 <p>Splatoon is an online 4v4 shooter where the characters shoot ink from their guns. In the game's main mode, Turf War, players must cover more of a map with their own colored ink than the other team within 3 minutes.</p>
                 <p>The game also has an offline campaign, where the player goes through different levels ranging from platforming challenges to all-out combat sections. I won't go into detail on that, though.</p>
                 <p>Additionally, there are multiple other multiplayer modes, such as Splat Zones, Rainmaker, and Clam Blitz. These are in the game's ranked mode, Anarchy Battles.</p>
-                <p>A PvE mode also exists, called Salmon Run, where the players must survive against "Salmonids" and collect Golden Eggs to win.</p>
-                <p>I'll add more info here. If I don't do so within a week, tell me on GitHub, please.</p>
+                <p>A PvE mode also exists, called Salmon Run, where the players must survive 3 waves against "Salmonids" and collect Golden Eggs to meet a quota for each wave. There's also terrifying bosses that sometimes pop up after all three waves are completed.</p>
             <h3>Shenanigans</h3>
                 <p>This is predominantly an online multiplayer game, but it still has its fair share of shenanigans. What game doesn't?</p>
                 <p>First off, it's an online multiplayer game. Emphasis on "online multiplayer" here. That means you need to pay Nintendo $20 a year to play a $60 game on a $300 console. And the online servers are... subpar, to say the least.</p>
@@ -48,6 +47,7 @@
                 <p>I can't hide it anymore. Splat3 gets...</p>
             <h2>8/10 - Would highly recommend</h2>
                 <p>If you like third-person shooters, colorful chaos, and multiplayer madness, then Splatoon 3 is for you. Just be aware of the NSO requirement.</p>
+            <h3><a href="splat3Media.html">Media</a></h3>
             <h2>More like this</h2>
                 <nav>
                     <a href="/game-journals/placeholder.html">Placeholder</a>
