--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
 				<p>
 					Welcome to Starlii's Game Journals. Here I can document what
 					shenanigans are possible in video games, mess around with them, and
-					review how good I think their gameplay is.
+					review how good I think their gameplay is. The stuff here is a bit
+					unhinged, sure, but it's funny. So you get to enjoy it too!
 				</p>
 			</div>
 			<div id="starterPages">
 				<h2>New here? Read these!</h2>
 				<nav>
-					<a href="/game-journals/Nintendo Switch/RPG/pokemonViolet.html">Pokémon Violet</a>
-					<a href="/game-journals/Nintendo Switch/Shooter/splatoon3.html">Splatoon 3</a>
+					<p><a href="/game-journals/Nintendo Switch/RPG/pokemonViolet.html">Pokémon Violet</a>, an RPG focused around taming creatures and training them to become literal demigods.</p>
+					<p><a href="/game-journals/Nintendo Switch/Shooter/splatoon3.html">Splatoon 3</a>, a colorful third-person shooter where kids-turned-squids shoot each other with paint for fun.</p>
 					<a href="/game-journals/PC/Shooter/overwatch.html">Overwatch 2 (doesn't work right now)</a>
 				</nav>
 			</div>
 			<div id="newPages">
 				<h2>Recently added</h2>
 				<nav>
-					<a href="/game-journals/Nintendo Switch/RPG/pokemonSword.html">Pokémon Sword</a>
-					<a href="/game-journals/Nintendo Switch/Shooter/splatoon3.html">Splatoon 3</a>
+					<p><a href="/game-journals/PC/Sandbox/minecraft.html">Minecraft</a>a blocky sandbox game that can make you forget the concept of time.</p>
+					<p><a href="/game-journals/Nintendo Switch/RPG/pokemonSword.html">Pokémon Sword</a>, an RPG where tiny creatures get beaten up by the greatest beings to walk the Earth.</p>
+					<p><a href="/game-journals/Nintendo Switch/Shooter/splatoon3.html">Splatoon 3</a>, a colorful third-person shooter where kids-turned-squids shoot each other with paint for fun.</p>
 				</nav>
 			</div>
 		</div>
