--- a/placeholder.html
+++ b/placeholder.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Placeholder</title>
+        <title>Placeholder - Starlii's Game Journals</title>
     </head>
     <body style="
 
@@ -13,6 +13,7 @@
     ">
         <h1>Placeholder</h1>
         <p>If you're here, it's most likely because you tried to access a placeholder page.</p>
-        <p>Try going back to the <a href="/game-journals/index.html">home page</a>.</p>
+        <p>This is basically a 404 page without the 404, because I don't know how to handle 404s.</p>
+        <p>I guess I can give a link to the <a href="/game-journals/index.html">home page</a>. If you wanna go there. Or not. I'm not your dad.</p>
     </body>
 </html>
