--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<div id="newPages">
 				<h2>Recently added</h2>
 				<nav>
-					<p><a href="/game-journals/PC/Sandbox/minecraft.html">Minecraft</a>a blocky sandbox game that can make you forget the concept of time.</p>
+					<p><a href="/game-journals/PC/Sandbox/minecraft.html">Minecraft</a>, a blocky sandbox game that can make you forget the concept of time.</p>
 					<p><a href="/game-journals/Nintendo Switch/RPG/pokemonSword.html">Pokémon Sword</a>, an RPG where tiny creatures get beaten up by the greatest beings to walk the Earth.</p>
 					<p><a href="/game-journals/Nintendo Switch/Shooter/splatoon3.html">Splatoon 3</a>, a colorful third-person shooter where kids-turned-squids shoot each other with paint for fun.</p>
 				</nav>
