Change out the links in the main page

--- a/index.html
+++ b/index.html
@@ -24,17 +24,17 @@
 			<div id="starterPages">
 				<h2>New here? Read these!</h2>
 				<nav>
-					<p><a href="/game-journals/Nintendo Switch/RPG/pokemonViolet.html">Pokémon Violet</a>, an RPG focused around taming creatures and training them to become literal demigods.</p>
-					<p><a href="/game-journals/Nintendo Switch/Shooter/splatoon3.html">Splatoon 3</a>, a colorful third-person shooter where kids-turned-squids shoot each other with paint for fun.</p>
-					<a href="/game-journals/PC/Shooter/overwatch.html">Overwatch 2 (doesn't work right now)</a>
+					<p><a href="/game-journals/Nintendo/Switch/RPG/pokemonViolet.html">Pokémon Violet</a>, an RPG focused around taming creatures and training them to become literal demigods.</p>
+					<p><a href="/game-journals/Nintendo/Switch/Shooter/splatoon3.html">Splatoon 3</a>, a colorful third-person shooter where kids-turned-squids shoot each other with paint for fun.</p>
+					<p><a href="/game-journals/PC/Shooter/overwatch.html">Overwatch 2</a>, a first-person hero shooter that I treat like a Gardevoir: it inflicts psychic damage when you play it. This page doesn't even exist.</p>
 				</nav>
 			</div>
 			<div id="newPages">
 				<h2>Recently added</h2>
 				<nav>
+					<p><a href="/game-journals/PC/Action-Adventure/arkevolved.html">ARK: Survival Evolved</a>, a survival game with the most buggy and broken code ever. Not kidding.</p>
 					<p><a href="/game-journals/PC/Sandbox/minecraft.html">Minecraft</a>, a blocky sandbox game that can make you forget the concept of time.</p>
-					<p><a href="/game-journals/Nintendo Switch/RPG/pokemonSword.html">Pokémon Sword</a>, an RPG where tiny creatures get beaten up by the greatest beings to walk the Earth.</p>
-					<p><a href="/game-journals/Nintendo Switch/Shooter/splatoon3.html">Splatoon 3</a>, a colorful third-person shooter where kids-turned-squids shoot each other with paint for fun.</p>
+					<p><a href="/game-journals/Nintendo/Switch/RPG/pokemonSword.html">Pokémon Sword</a>, an RPG where tiny creatures get beaten up by the greatest beings to walk the Earth.</p>
 				</nav>
 			</div>
 		</div>
