fix the css links in the media pages

--- a/Nintendo/Switch/RPG/violetMedia.html
+++ b/Nintendo/Switch/RPG/violetMedia.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Media - Pokémon Violet - Starlii's Game Journals</title>
-        <link rel="stylesheet" href="global.css">
+        <link rel="stylesheet" href="/game-journals/global.css">
     </head>
     <body>
         <header>
