--- a/Nintendo/Switch/Shooter/splatoon3Media.html
+++ b/Nintendo/Switch/Shooter/splatoon3Media.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Media - Splatoon 3 - Starlii's Game Journals</title>
-        <link rel="stylesheet" href="global.css">
+        <link rel="stylesheet" href="/game-journals/global.css">
     </head>
     <body>
         <header>
